Resolves: fdo#67944 set dialogcontrol bit to tab into simpletable

Change-Id: I1ea653d5546961096a9368b4d1d9a1dd39a80745